# RAG_POC

./: pyproject.toml  requirements.txt
0_DataIngestion/: 1_dataingestion.ipynb  2_dataIngestionPdf.ipynb
1_EmbeddingAndVectorDB/: 1_chromadb.ipynb  2_faiss.ipynb  3_astradb.ipynb  embedding.ipynb
1_EmbeddingAndVectorDB/chroma_db_dir/: chroma.sqlite3
3_AdvanceChunking/: 1_semanticchunking.ipynb
4_Agents/: 1_langchain_agent.ipynb  2_structured_output.ipynb  3_summarization.ipynb  4-messages.ipynb
